<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="product"
            type="co.edu.unab.mgads.lpacheco.storeapp.model.entity.Product" />

        <import type="co.edu.unab.mgads.lpacheco.storeapp.utils.BindingUtilsKt"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.ProductAddActivity">

        <ImageView
            android:id="@+id/iv_product_add_logo"

            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/storeapp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_product_add_titulo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/iv_product_add_logo"
            android:layout_marginHorizontal="48dp"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="24sp"
            android:text="@string/tv_product_add_titule"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_product_add_logo"
            android:id="@+id/et_product_add_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="48dp"
            android:text="@={product.name}"
            android:hint="@string/hint_add_product_name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_product_add_name"
            android:id="@+id/et_product_add_price"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="48dp"
            android:hint="@string/hint_add_product_price"
            android:inputType="number"
            android:text="@={BindingUtilsKt.intToString(product.price)}"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_product_add_price"
            android:id="@+id/et_product_add_url_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="48dp"
            android:hint="@string/hint_add_product_url_image"
            android:text="@={product.urlImage}"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_product_add_url_image"
            android:id="@+id/et_product_add_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="48dp"
            android:hint="@string/hint_add_product_password"
            android:inputType="textPassword"

            />

        <EditText
            android:id="@+id/et_product_add_descripcion"
            app:layout_constraintTop_toBottomOf="@id/et_product_add_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="48dp"
            android:hint="@string/hint_add_product_ed_description"
            android:inputType="textMultiLine"
            android:text="@={product.description}"
            />

        <Button
            android:id="@+id/btn_add_product_btn_agregar"
            app:layout_constraintTop_toBottomOf="@id/et_product_add_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="30dp"
            android:text="@string/txt_add_product_btn_agregar"/>

        <Button
            android:id="@+id/btn_add_product_btn_regresar"
            app:layout_constraintTop_toBottomOf="@id/btn_add_product_btn_agregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="48dp"
            android:text="@string/txt_add_product_btn_regresar"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>