<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--<variable
            name="user"
            type="co.edu.unab.mgads.lpacheco.storeapp.model.entities.User" />-->

        <variable
            name="viewModel"
            type="co.edu.unab.mgads.lpacheco.storeapp.viewmodel.MainActivityViewModel" />

        <variable
            name="title"
            type="String" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">


    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/storeapp"
        android:layout_marginTop="20dp"
        android:scaleType="center"/>


    <TextView
        android:id="@+id/login_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@{title}"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="20sp"
        android:textColor="@color/design_default_color_primary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_logo" />

    <EditText
        android:id="@+id/login_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ogin_hint_email"
        android:text="@={viewModel.user.name}"
        app:layout_constraintTop_toBottomOf="@id/login_tv_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32sp"
        android:layout_marginHorizontal="32sp"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:text="@={viewModel.user.password}"
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_password"
        app:layout_constraintTop_toBottomOf="@id/login_et_email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32sp"
        android:layout_marginHorizontal="32sp"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_btnlogin"
        app:layout_constraintTop_toBottomOf="@id/login_et_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/login_btn_login"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintRight_toLeftOf="@id/login_btn_signup"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_txt_btnsignup"
        app:layout_constraintTop_toBottomOf="@id/login_et_password"
        android:id="@+id/login_btn_signup"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/login_btn_login"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>